Fix cutoff progress chart

--- a/src/components/Progress/Progress.css
+++ b/src/components/Progress/Progress.css
@@ -6,5 +6,5 @@
 }
 
 .Progress canvas {
-  margin-bottom: 80px;
+  padding-bottom: 80px;
 }
